2010-07-29 Pierre Wieser <pwieser@trychlos.org>

	* docs/nact/Makefile.am: New file.

	* configure.ac:
	* docs/Makefile.am: Updated accordingly.

	Create NACT user's manual skeleton.
	
	* docs/nact/C/appendix-feedback.xml:
	* docs/nact/C/appendix-gnu-fdl-1.3.xml:
	* docs/nact/C/articleinfo.xml:
	* docs/nact/C/figures/nact-basenames-tab.png:
	* docs/nact/C/figures/nact-capabilities-tab.png:
	* docs/nact/C/figures/nact-command-tab.png:
	* docs/nact/C/figures/nact-environment-tab.png:
	* docs/nact/C/figures/nact-execution-tab.png:
	* docs/nact/C/figures/nact-folders-tab.png:
	* docs/nact/C/figures/nact-legend.png:
	* docs/nact/C/figures/nact-main-empty.png:
	* docs/nact/C/figures/nact-mimetypes-tab.png:
	* docs/nact/C/figures/nact-preferences-export.png:
	* docs/nact/C/figures/nact-preferences-import.png:
	* docs/nact/C/figures/nact-preferences-io-providers.png:
	* docs/nact/C/figures/nact-preferences-runtime.png:
	* docs/nact/C/figures/nact-preferences-schemes.png:
	* docs/nact/C/figures/nact-preferences-ui.png:
	* docs/nact/C/figures/nact-properties-tab.png:
	* docs/nact/C/figures/nact-schemes-tab.png:
	* docs/nact/C/figures/nat-new-capability.png:
	* docs/nact/C/index.xml:
	* docs/nact/C/legalnotice.xml: New files.

	Do some cleanup in NAObjectAction and NAObjectProfile code.
	Implement execution of singular vs. plural command forms.

	* src/api/na-object-action.h:
	* src/core/na-object-action.c (na_object_action_is_candidate):
	Removed function.

	* src/api/na-object-profile.h:
	* src/core/na-object-profile.c (na_object_profile_parse_parameters):
	Removed function.

	* src/core/na-tokens.c:
	* src/core/na-tokens.h (na_tokens_execute_action): New function.

	* src/plugin-menu/nautilus-actions.c (execute_action):
	Move action execution to NATokens class.

	* src/utils/nautilus-actions-run.c: Now use NATokens class.

	* doc/: Renamed as docs/

	* configure.ac:
	* Makefile;am: Updated accordingly.

	* configure.ac: Bump the version number after release.
